Fix overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,10 @@
   padding: 1vw;
 }
 
+.hero .sortbutton {
+  overflow-x: hidden
+}
+
 .hero .sortbutton button{
   text-align: right;
   border-top: none;
@@ -38,10 +42,6 @@
   cursor: pointer;
   padding: 10px 50px;
   margin-bottom: 2vw;
-}
-
-.hero .sortbutton .newest{
-  text-align: left;
 }
 
 .hero .image-description{
